[gd_scene load_steps=2 format=2]

[ext_resource path="res://scenes/misc/Spawner.gd" type="Script" id=1]

[node name="Spawner" type="Node"]
script = ExtResource( 1 )

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="Timer2" type="Timer" parent="."]

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_Timer2_timeout"]
